kubernetes/examen/1-pregunta-3.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: test-ns
---
apiVersion: v1
kind: Namespace
metadata:
  name: prod-ns
