kubernetes/examen/1-pregunta-2.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: storage-test
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: media
  namespace: storage-test
spec:
  replicas: 3
  selector:
    matchLabels:
      app: media
  template:
    metadata:
      labels:
        app: media
    spec:
      containers:
      - name: media
        image: busybox
        command: ["sh","-c","sleep 3600"]
        volumeMounts:
        - name: shared-data
          mountPath: /data
      volumes:
      - name: shared-data
        persistentVolumeClaim:
          claimName: shared-pvc
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
  namespace: storage-test
  labels:
    app: db
spec:
  replicas: 2
  selector:
    matchLabels:
      app: db
  serviceName: postgres
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - name: postgres
        image: postgres:15
        volumeMounts:
        - name: data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1Gi
      storageClassName: standard
