kubernetes/examen/creativo.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: playoff
  labels:
    env: lab
    team: blue
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api-gw
  namespace: playoff
  labels:
    app: api-gw
spec:
  replicas: 2
  selector:
    matchLabels:
      app: api-gw
  template:
    metadata:
      labels:
        app: api-gw
    spec:
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              labelSelector:
                matchExpressions:
                - key: app
                  operator: In
                  values:
                  - api-gw
              topologyKey: kubernetes.io/hostname
      containers:
      - name: nginx
        image: nginx:1.25
        ports:
        - containerPort: 80
        volumeMounts:
        - name: ini
          mountPath: "/etc/runtime/settings.ini"
          subPath: settings.ini
          readOnly: true
        - mountPath: /var/cache/nginx
          name: cache-volume
        - mountPath: /var/run
          name: cache-volume
        securityContext:
          runAsNonRoot: true
          runAsUser: 1000
          allowPrivilegeEscalation: false
        readinessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 3
          periodSeconds: 5
        livenessProbe:
          httpGet:
            path: /
            port: 80
          initialDelaySeconds: 10
          periodSeconds: 10
        resources:
          requests:
            cpu: 100m
            memory: 128Mi
          limits:
            cpu: 300m
            memory: 256Mi
      volumes:
      - name: ini
        configMap:
          name: runtime-config
      - name: cache-volume
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: api-gw-svc
  namespace: playoff
spec:
  selector:
    app: api-gw
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scraper
  namespace: playoff
  labels:
    app: scraper
spec:
  replicas: 2
  selector:
    matchLabels:
      app: scraper
  template:
    metadata:
      labels:
        app: scraper
    spec:
      containers:
      - name: busybox
        image: busybox
        command: ["sh","-c",'i=0; while true; do echo "$(hostname) $i $(date)" >> /logs/out.log; i=$((i+1)); sleep 2; done']
        ports:
        - containerPort: 80
        volumeMounts:
        - mountPath: "/logs"
          name: mypd
      volumes:
        - name: mypd
          persistentVolumeClaim:
            claimName: pvc-playoff
